force-app/main/default/objects/Invoice_Line_Item__c/fields/DetailType__c.field-meta.xml
<CustomField>
    <fullName>DetailType__c</fullName>
    <label>DetailType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>