force-app/main/default/objects/Invoice_Line_Item__c/fields/Discount_Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Discount_Account_Reference__c</fullName>
    <label>Discount Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>