force-app/main/default/objects/Invoice_Line_Item__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <label>Qty</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>