force-app/main/default/objects/Invoice_Line_Item__c/fields/Tax_Code_Reference__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_Reference__c</fullName>
    <label>Tax Code Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>