force-app/main/default/objects/Invoice_Line_Item__c/fields/Tax_Inclusive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Inclusive_Amount__c</fullName>
    <label>Tax Inclusive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>